Added more robust logging and exception handling